Added db conn string

--- a/InternetBanking/InternetBanking/appsettings.json
+++ b/InternetBanking/InternetBanking/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "McbaContext": "Server=rmit-wdt-2021.australiasoutheast.cloudapp.azure.com;Database=s3677701_a2;uid=s3677701_a2;pwd=abc123;MultipleActiveResultSets=true"
+  }
 }
