--- a/InternetBanking/InternetBanking/InternetBanking.csproj
+++ b/InternetBanking/InternetBanking/InternetBanking.csproj
@@ -13,6 +13,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
     <PackageReference Include="SimpleHashing" Version="2.0.0.1" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
